// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totaling
    $2,000.00
  </h1>
</div>
`;

exports[`should render single expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling
    $2,000.00
  </h1>
</div>
`;

exports[`should render without expense 1`] = `
<div>
  <h1>
    No expense available.
  </h1>
</div>
`;
